--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.24.0",
+    "miragejs": "^0.1.43",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -43,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react-icons": "^3.0.0",
     "@types/styled-components": "^5.1.19"
   }
