--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.4",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
@@ -48,6 +49,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/react-icons": "^3.0.0",
+    "@types/react-scroll": "^1.8.3",
     "@types/styled-components": "^5.1.19"
   }
 }
