--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "axios": "^0.24.0",
+    "framer-motion": "^5.5.6",
     "miragejs": "^0.1.43",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-input-mask": "^2.0.4",
+    "react-intersection-observer": "^8.33.1",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "styled-components": "^5.3.3",
@@ -49,6 +52,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/react-icons": "^3.0.0",
+    "@types/react-input-mask": "^3.0.1",
     "@types/react-scroll": "^1.8.3",
     "@types/styled-components": "^5.1.19"
   }
