--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.3.1",
     "react-input-mask": "^2.0.4",
     "react-intersection-observer": "^8.33.1",
+    "react-lottie": "^1.2.3",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
     "styled-components": "^5.3.3",
@@ -56,6 +57,7 @@
     "@types/axios": "^0.14.0",
     "@types/react-icons": "^3.0.0",
     "@types/react-input-mask": "^3.0.1",
+    "@types/react-lottie": "^1.2.6",
     "@types/react-scroll": "^1.8.3",
     "@types/styled-components": "^5.1.19"
   }
