--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-lottie": "^1.2.3",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.4",
+    "react-touch-drag-slider": "^2.1.3",
     "styled-components": "^5.3.3",
+    "swiper": "^7.4.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "yup": "^0.32.11"
